<resources>
    <string name="app_name">ProChat</string>
    <string name="type_a_message">Type a message…</string>
    <string name="camera">Camera</string>
    <string name="send_">send</string>
    <string name="phone_verification">Verify your mobile number.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify">Verify</string>
    <string name="verify_message">An OTP will be sent to your mobile.</string>
    <string name="hey_there">Hey there!</string>
    <string name="lets_get_started">Let\'s get started.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="next">Next</string>
    <string name="next_button_message">An OTP will be sent to your phone</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="dd_mm_yyy">DD/MM/YYY</string>
    <string name="calender">calender</string>
    <string name="phone">Phone</string>
    <string name="my_profile">My Profile</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="username">Username</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="time">12:29 pm</string>
    <string name="this_is_my_message">This is my message</string>
    <string name="plus">plus</string>
    <string name="secret_code">Secret Code</string>
    <string name="share">Share</string>
    <string name="join">Join</string>
    <string name="please_share_this_code_with_your_friends_to_start_the_call">Please Share this code with your friends to start the call</string>
    <string name="enter_your_code">Enter your code.</string>
    <string name="please_enter_a_random_">Please Enter a Random code to start the call</string>
</resources>