<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PhoneAuthentication"
    android:background="@drawable/back_back2">




    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView3"
        android:layout_width="match_parent"
        android:layout_height="570dp"
        app:cardCornerRadius="30dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back">


            <TextView
                android:id="@+id/next_button_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/phone_verification"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.867"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.249"
                app:layout_constraintWidth_percent="0.45" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/next_button_textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/next_button_textView"
                app:layout_constraintVertical_bias="0.733"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/phone_verification"
                app:lottie_repeatCount="10">

            </com.airbnb.lottie.LottieAnimationView>


            <com.hbb20.CountryCodePicker
                android:id="@+id/codePicker"
                android:layout_width="117dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/edit_bg"
                app:layout_constraintBottom_toBottomOf="@+id/number_editText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/number_editText"
                app:ccp_contentColor="@color/black"
                app:ccpDialog_backgroundColor="@color/white"
                app:ccpDialog_searchEditTextTint="@android:color/darker_gray"
                app:ccpDialog_allowSearch="true">

            </com.hbb20.CountryCodePicker>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_editText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_bg"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/next_button_textView"
                app:layout_constraintWidth_percent="0.62" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="164dp"
                android:background="@drawable/button_bg"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.8" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/next_button_message"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/next_button"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="@+id/next_button"
                app:layout_constraintTop_toBottomOf="@+id/next_button"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/welcome"
        app:lottie_repeatCount="10" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="113dp"
        android:layout_height="28dp"
        android:layout_marginEnd="84dp"
        android:text="@string/hey_there"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/lets_get_started"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>