<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bactexture"
    tools:context=".Fragments.CallsFragment">


    <Button
        android:id="@+id/joinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/join"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/secretCode"
        app:layout_constraintStart_toStartOf="@+id/secretCode"
        app:layout_constraintTop_toBottomOf="@+id/secretCode"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/secretCode"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_bg"
        android:gravity="center"
        android:hint="@string/enter_your_code"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="4dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/please_enter_a_random_"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/secretCode"
        app:layout_constraintEnd_toEndOf="@+id/secretCode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/secretCode"
        app:layout_constraintWidth_percent="0.8" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/videocall2"
        app:lottie_repeatCount="100">

    </com.airbnb.lottie.LottieAnimationView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_down"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/videocall1"
        app:lottie_repeatCount="100">

    </com.airbnb.lottie.LottieAnimationView>

</androidx.constraintlayout.widget.ConstraintLayout>