<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="102dp"
    android:background="?selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp"
        android:elevation="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/users_parentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF7E0">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
               android:src="@drawable/profileavatar" />

            <TextView
                android:id="@+id/username_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-light"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.041"
                app:layout_constraintStart_toEndOf="@+id/avatar_imageView"
                app:layout_constraintTop_toTopOf="@+id/avatar_imageView" />

            <TextView
                android:id="@+id/tap_to_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap_to_chat"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.067"
                app:layout_constraintStart_toEndOf="@+id/avatar_imageView"
                app:layout_constraintTop_toBottomOf="@+id/username_textView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/time_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/time"
                app:layout_constraintBottom_toBottomOf="@+id/tap_to_chat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/username_textView"
                app:layout_constraintVertical_bias="0.552" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>