<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bactexture"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.ChatActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/message_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bactexture"
        android:divider="@android:color/transparent"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.78"
        app:layout_constraintTop_toBottomOf="@+id/cardView_toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_message">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_recyclerView"
        app:layout_constraintVertical_bias="0.515">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:inputType="textMultiLine"
                android:hint="@string/type_a_message"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintWidth_percent=".75"
                android:importantForAutofill="no">

            </EditText>

            <ImageView
                android:id="@+id/photoPickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/messageEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_photo_camera_24"
                android:contentDescription="@string/camera" />

            <ImageView
                android:id="@+id/sendButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.304"
                app:layout_constraintStart_toEndOf="@+id/messageEditText"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/send"
                android:contentDescription="@string/send_" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="30dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_top_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#98BAE7"
            app:titleTextColor="@color/white"
            android:minHeight="?attr/actionBarSize" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>